--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -62,27 +62,29 @@
         </div>
         <div class="modal-body">
           <div class="form-row">
+            <button (click)="addCoop()">Adicionar</button>
+          </div>
+          <div *ngFor="let coop of coops;let i = index " class="form-row">
             <div class="form-group col-md-4">
-              <label for="">Coop(s)</label>
-              <input type="text" class="form-control" id="" name="coop" [(ngModel)]="model.coop" placeholder="">
+                <label for="">Coop(s)</label>
+                <input type="text" class="form-control" id="" name="coop" [(ngModel)]="model.coop[i]" placeholder="">
             </div>
             <div class="form-group col-md-4">
-              <label for="">Unidade(s)</label>
-              <select name="" id="" class="form-control">
-                <option value=""></option>
-              </select>
+                <label for="">Unidade(s)</label>
+                <select name="" id="" class="form-control">
+                    <option value=""></option>
+                </select>
             </div>
-
             <div class="form-group col-md-3">
-              <label for="">Curso(s)</label>
-              <select name="" id="" class="form-control">
-                <option value=""></option>
-              </select>
+                <label for="">Curso(s)</label>
+                <select name="" id="" class="form-control">
+                    <option value=""></option>
+                </select>
             </div>
             <div class="form-group class-md-1" style="position: relative">
-              <a href="#0" (click)="addCurso"><img [src]="divide" style="max-width: 20px; position: absolute; top: 50%;"></a>
+                <button (click)="addCoop">x</button>
             </div>
-          </div>
+        </div>
         </div>
           <br/><br/>
           <div class="modal-footer">
@@ -324,68 +326,6 @@
       </div>
     </div>
   </div>
-
-<div class="modal fade" id="modalProjectUnits" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel"> Escolha a unidade e os colaboradores do projeto</h5>
-<<<<<<< HEAD
-            </div>
-            <div class="modal-body">
-                <div class="form-row">
-                    <div class="form-group col-md-4">
-                        <label for="">Coop(s)</label>
-                        <input type="text" class="form-control" id="" name="coop" [(ngModel)]="model.coop" placeholder="">
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="">Unidade(s)</label>
-                        <select name="" id="" class="form-control">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label for="">Curso(s)</label>
-                        <select name="" id="" class="form-control">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                    <div class="form-group class-md-1" style="position: relative">
-                        <a href="#0" (click)="addCurso()"><img [src]="divide" style="max-width: 20px; position: absolute; top: 50%;"></a>
-                    </div>
-                </div>
-=======
-                <div *ngFor="let coop of coops">
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label for="">Coop(s)</label>
-                            <input type="text" class="form-control" id="" name="" placeholder="">
-                        </div>
-                        <div class="form-group col-md-4">
-                            <label for="">Unidade(s)</label>
-                            <select name="" id="" class="form-control">
-                                <option value=""></option>
-                            </select>
-                        </div>
-                        <div class="form-group col-md-4">
-                            <label for="">Curso(s)</label>
-                            <select name="" id="" class="form-control">
-                                <option value=""></option>
-                            </select>
-                            <a href="#0" (click)="deleteCurso"><img [src]="divide" style="max-width: 20px"></a>
-                        </div>
-                    </div>
->>>>>>> 4c769b686fe2532c7a607bfb3868a458cef4dd5d
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
-                  <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-                      data-target="#modalResources" >CONTINUAR</button>
-              </div>
-            </div>
-        </div>
-    </div>
 
 <div class="modal fade" id="modalMidias" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
