--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -123,7 +123,7 @@
                 <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Detalhes</b></button>
               </div>
               <div class="col-sm-3">
-                <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Capa</b></button>
+                <button type="button" class="btn-outline-dark" id="btn-recursos" data-dismiss="modal" data-toggle="modal" data-target="#modalResCapa"><b>Capa</b></button>
               </div>
             </div>    
           </div>
@@ -201,20 +201,22 @@
                 <h4 class="modal-title" id="imagemlabel1" style="margin-left: 5%">CADASTRO DE IMAGEM</h4>
                 <h5 class="modal-title" id="imagemlabel2" style="margin-left: 5%">Escolha as imagens que melhor caracterizam o projeto</h5> <br/>
                
-                <form #f="ngForm" (ngSubmit)="onSubmit()">
+           <form #fi="ngForm" (ngSubmit)="onSubmit()">
                     <label style="margin-left: 5%"> Título da Imagem </label>
                     <input type="text" class="form-control" id="tituloImagem" name="tituloImagem" [(ngModel)]="model.tituloImagem" required> <br/>
 
                     <label for="" style="margin-left: 5%"> Legenda </label>
                     <input type="text" class="form-control" id="legendaImagem" name="legendaImagem" [(ngModel)]="model.legendaImagem">
-                </form>
-                
-                    <input-file
-              placeholder="" style="margin-left:7%" name="imagens" [(ngModel)]="model.imagens">
-                    </input-file>
-               
+                </form> 
+
+                <input-file
+                placeholder="" style="margin-left:7%" name="imagens1" [(ngModel)]="model.imagens1" required>
+                </input-file>
+             
+          
+                    
               <div class="modal-footer">
-                  <button type="button" class="btn btn-danger" id="btnSalvarImagem" data-dismiss="modal" data-toggle="modal" data-target="#modalFinalizar" [disabled]="f.invalid">SALVAR</button>
+                  <button type="button" class="btn btn-danger" id="btnSalvarImagem" data-dismiss="modal" data-toggle="modal" data-target="#modalFinalizarImg" [disabled]="fi.invalid">SALVAR</button>
                   <button type="button" class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal" data-target="#modalResources" >+ RECURSOS</button>
               </div>
                   </div>
@@ -222,7 +224,7 @@
         </div>
             
         
-        <div class="modal fade" id="modalFinalizar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+        <div class="modal fade" id="modalFinalizarImg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
               <div class="modal-content">
                 <h4 style="margin-top: 20%; margin-left:5%">Você ainda pode adicionar outras imagens ao seu projeto. Clique no botão "CONTINUAR" para acrescentar mais imagens, ou clique em "FINALIZAR" para concluir a edição e retornar à sua página personalizada.</h4>
@@ -231,6 +233,40 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="modalResCapa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+          <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+              <button type="button" class="close" data-toggle="modal" data-dismiss="modal" data-target="#modalResources" style="margin-left: 85%;margin-top: 1%" aria-label="Close">
+                <span aria-hidden="true" style="font-size: 10px"> <u>< VOLTAR</u></span>
+            </button>
+                <h4 class="modal-title" id="imagemlabel1" style="margin-left: 5%">CAPA DO PROJETO</h4>
+                <h5 class="modal-title" id="imagemlabel2" style="margin-left: 5%">Escolha uma imagem para a capa do seu projeto</h5> <br/>
+               
+           <form #fc="ngForm" (ngSubmit)="onSubmit()" style="margin-left:40%; width: 200px; height: 300px;">
+               
+                <input-file
+                fileAccept="image/*" fileLimit="1" name="capa" [(ngModel)]="model.capa" required >
+                </input-file>
+                </form> 
+                    
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" id="btnSalvarImagem" data-dismiss="modal" data-toggle="modal" data-target="#modalFinalizarCapa" [disabled]="fc.invalid">SALVAR</button>
+                  <button type="button" class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal" data-target="#modalResources" >+ RECURSOS</button>
+              </div>
+                  </div>
+              </div>
+        </div>
+
+        <div class="modal fade" id="modalFinalizarCapa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+          <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+              <h4 style="margin-top: 20%; margin-left:5%">Você pode substituir a imagens de capa do seu projeto. Clique no botão "CONTINUAR" para substituir a imagem de capa, ou clique em "FINALIZAR" para concluir a edição e retornar à sua página personalizada.</h4>
+              <button type="submit" class="btn btn-danger" id="btnFinalizar" data-dismiss="modal" (click)="postProject()" >FINALIZAR</button>
+              <button type="button" class="btn btn-danger" id="btnContinuar" data-dismiss="modal" data-toggle="modal" data-target="#modalResCapa">CONTINUAR</button>
+              </div>
+          </div>
+      </div>
 
 
 
@@ -247,6 +283,7 @@
                         <label for="">Coop(s)</label>
                         <input type="text" class="form-control" id="" name="coop" [(ngModel)]="model.coop" placeholder="">
                     </div>
+
                     <div class="form-group col-md-4">
                         <label for="">Unidade(s)</label>
                         <select name="" id="" class="form-control">
@@ -267,8 +304,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-                    data-target="#modalResources">CONTINUAR</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#modalResources">CONTINUAR</button>
             </div>
           </div>
         </div>
