--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -293,33 +293,32 @@
             <h6>Incorpore códigos específicos ao seu projeto</h6>
           </div>
           <br/>
-          <form #fCode="ngForm" (ngSubmit)="onSubmit()">
-            <label for="">Título do Código</label>
-            <input type="text" class="form-control" id="" name="tituloCodigo" [(ngModel)]="model.tituloCodigo" required><br/>
+          <label for="">Título do Código</label>
+          <input type="text" class="form-control" id="" name="tituloCodigo" [(ngModel)]="model.titulo"><br/>
             
-            <label for="">Subtítulo do Código</label>
-            <input type="text" class="form-control" id="" name="subtituloCodigo" [(ngModel)]="model.subtituloCodigo"><br/>
+          <label for="">Subtítulo do Código</label>
+          <input type="text" class="form-control" id="" name="subtituloCodigo" [(ngModel)]="model.legenda"><br/>
             
-            <label for="">Link de origem do Código</label>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" id="" name="linkCodigo" [(ngModel)]="model.linkCodigo" required>
-              <button type="submit" class="btn btn-success" id="iCode" [disabled]="fCode.invalid">INCORPORAR</button>
-            </div>
-          </form>
-          <div>
-            <div>
-              <div class="relative" >
-                <a href="#0"><img [src]="viewCode" style="max-width: 120px;"></a>
-                <div class="absolute">
-                  <a href="#1"><img [src]="delCode" style="max-width: 25px;"></a>
+          <label for="">Link de origem do Código</label>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" id="" name="linkCodigo" [(ngModel)]="model.caminho">
+            <button class="btn btn-success" id="iCode" (click)="addArquivo('Codigo')">INCORPORAR</button>
+          </div>
+          <div class="row justify-content-center">
+            <div *ngFor='let arquivo of arquivos; let i = index'>
+              <div class="col-md-2">
+                <div class="relative" id="t1">
+                  <a href="#0" target="__blank"><img [src]="viewCode" title=model.titulo style="max-width: 120px;" (click)="urlDestino(model.caminho)"></a>
+                  <div class="absolute">
+                    <a href="#1"><img [src]="delCode" title="Excluir" style="max-width: 25px;" (click)="deleteArquivo(i)"></a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
         <div class="modal-footer">
-            <button class="btn btn-danger" id="btnSalvar" data-toggle="modal" data-dismiss="modal" data-target="#modalMsg2">SALVAR</button>          
-            <button class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal" data-target="#modalResources">+ RECURSOS</button>
+          <button class="btn btn-danger" id="btnSalvar" data-toggle="modal" data-dismiss="modal" data-target="#modalMsg2">SALVAR</button>          
+          <button class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal" data-target="#modalResources">+ RECURSOS</button>
         </div> 
       </div>
     </div>
