--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -65,6 +65,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel"> Escolha a unidade e os colaboradores do projeto</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" id="close-modal-profile" style="font-size: 15px"> VOLTAR</span>
+        </button>
       </div>
       <div class="modal-body">
         <div *ngFor='let coop of coops; let i = index' class="form-row" style="padding: 20px;">
@@ -166,7 +169,7 @@
                 data-target="#modalResCodes"><b>Códigos</b></button>
             </div>
             <div class="col-sm-3">
-              <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Detalhes</b></button>
+              <button type="button" class="btn-outline-dark" id="btn-recursos" data-toggle="modal" data-target="#modalDetails" data-dismiss="modal"><b>Detalhes</b></button>
             </div>
             <div class="col-sm-3">
               <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Capa</b></button>
@@ -514,6 +517,70 @@
           <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
             data-target="#modalResText">CONTINUAR</button>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="modalDetails" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Adicionar Detalhes</h5><br>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <h5>Complete seu projeto com mais informações relevantes</h5>
+        <div>
+          <div class="form-row" style="margin-top: 20px">
+            <div class="form-group col-md-6">
+              <label for="">Categoria(s)</label>
+              <input class="form-control"type="text">
+            </div>
+            <div class="form-group col-md-5">
+              <label for="">Colaborador(es)</label>
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-md-1 icons-edit">
+                <i class="fas fa-plus-circle" style="cursor: pointer"></i>
+                <i class="fas fa-trash-alt" style="cursor: pointer; margin-left: 10px"></i>
+              </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="">Recursos Utilizados</label>
+              <input class="form-control"type="text">
+            </div>
+            <div class="form-group col-md-5">
+              <label for="">Premio(s) Conquistado(s)</label>
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-md-1 icons-edit">
+                <i class="fas fa-plus-circle" style="cursor: pointer"></i>
+                <i class="fas fa-trash-alt" style="cursor: pointer; margin-left: 10px"></i>
+              </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="">Direitos Autorais</label>
+              <input class="form-control"type="text">
+            </div>
+            <div class="form-group col-md-5">
+              <label for="">Créditos Adicionais</label>
+              <input type="text" class="form-control">
+            </div>
+            <div class="col-md-1 icons-edit">
+                <i class="fas fa-plus-circle" style="cursor: pointer"></i>
+                <i class="fas fa-trash-alt" style="cursor: pointer; margin-left: 10px"></i>
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer" style="display: flex; justify-content: center;">
+        <button type="button" class="btn btn-danger" data-dismiss="modal" style="border-radius: 30px;">SALVAR</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#modalResources" style="border-radius: 30px; margin-left: 30px;">+ RECURSOS</button>
       </div>
     </div>
   </div>
