--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -26,7 +26,7 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="">R.A</label>
-                <input type="text" class="form-control" id="" name="ra1" placeholder="{{ aluno.RA }}" value="{{ aluno.RA }}" [(ngModel)]="RA">
+                <input type="text" class="form-control" id="" name="ra1" placeholder="{{ aluno.ra }}" value="{{ aluno.ra }}" [(ngModel)]="RA">
               </div>
               <div class="form-group col-md-6">
                 <label for="">Unidade</label>
