--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -233,7 +233,8 @@
       </div>
       <div class="modal-footer">
         <div class="mr-auto">
-          <button class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
+          <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal" 
+            data-target="#modalResources" (click)="postProject()">FINALIZAR</button>
         </div>
         <div>
           <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
@@ -305,7 +306,8 @@
       </div>
       <div class="modal-footer">
         <div class="mr-auto">
-          <button class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
+          <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal" 
+            data-target="#modalResources" (click)="postProject()">FINALIZAR</button>
         </div>
         <div>
           <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
@@ -342,15 +344,16 @@
           <label for="">Link de origem do Código</label>
           <div class="input-group mb-3">
             <input type="text" class="form-control" id="t3" name="linkCodigo" [(ngModel)]="model.caminho" required>
-            <button type="submit" class="btn btn-success" id="iCode" (click)="addArquivo('Codigo')" [disabled]="fcode.invalid">INCORPORAR</button>
+            <button type="submit" class="btn btn-success" id="iCode" (click)="addArquivo('Codigo')" 
+              (click)="limpar()" (click)="desabilitar()" [disabled]="fcode.invalid">INCORPORAR</button>
           </div>
         </form>
         <div class="row justify-content-center">
           <div *ngFor='let arquivo of arquivos; let i = index'>
             <div class="col-md-2">
               <div class="relative">
-                <a href="#0" target="__blank"><img [src]="viewCode" title={{model.titulo}} style="max-width: 120px;"
-                    (click)="urlDestino(model.caminho)"></a>
+                <a href="#0" target="__blank"><img [src]="viewCode" title={{arquivo.titulo}} style="max-width: 120px;"
+                    (click)="urlDestino(arquivo.caminho)"></a>
                 <div class="absolute">
                   <a href="#1"><img [src]="delCode" title="Excluir" style="max-width: 25px;"
                       (click)="deleteArquivo(i)"></a>
@@ -364,7 +367,7 @@
         </div>
         <div class="modal-footer">
           <button class="btn btn-danger" id="btnSalvar" data-toggle="modal" data-dismiss="modal"
-            data-target="#modalMsg2">SALVAR</button>
+            data-target="#modalMsg2" [disabled]="!arquivos.length > 0">SALVAR</button>
           <button class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal"
             data-target="#modalResources">+ RECURSOS</button>
         </div>
@@ -521,7 +524,7 @@
         </div>
         <div>
           <button class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-            data-target="#modalResText">CONTINUAR</button>
+            data-target="#modalArquivos">CONTINUAR</button>
         </div>
       </div>
     </div>
